2001-05-11 John R. Jackson <jrj@purdue.edu>

	* changer-src/chg-scsi.c: Add support for "-slot advance".

2001-05-11 John R. Jackson <jrj@purdue.edu>

	* common-src/util.c (bind_portrange): Log a debug message stating
	  explicitly that all ports in the requested range were busy, or
	  that a specific port failed bind() for an unexpected reason.

2001-05-10 John R. Jackson <jrj@purdue.edu>

	* changer-src/scsi-changer-driver.c: Fix routine name in diagnostic
	  messages for DLT4000Eject.

2001-05-07 John R. Jackson <jrj@purdue.edu>

	* client-src/sendbackup-dump.c: Do not use full path to sed.  Found by
	  Roland E. Lipovits (rel@lipo.at0.net).

2001-05-04 John R. Jackson <jrj@purdue.edu>

	* config/depcomp: Fix problem with argument processing and update to
	  latest version.

2001-04-25 John R. Jackson <jrj@purdue.edu>

	* changer-src/chg-rth.pl.in: Add exec_prefix back since it is usually
	  used to define sbindir.  Sigh.  Include X=X assignments to get rid
	  of the Perl warnings.
	* server-src/amoverview.pl.in: Ditto.

2001-04-24 John R. Jackson <jrj@purdue.edu>

	* changer-src/chg-chio.pl.in: Remove unused exec_prefix to get rid of
	  warning message.  Patch from Nick Hibma <n_hibma@qubesoft.com>.

2001-04-23 John R. Jackson <jrj@purdue.edu>

	* client-src/selfcheck.c: Allow Samba shares with no password.
	* client-src/sendbackup-gnutar.c: Ditto.
	* client-src/sendsize.c: Ditto.

2001-04-21 John R. Jackson <jrj@purdue.edu>

	* tape-src/output-tape.c: Fix IRIX field reference (patch from Marc
	  W. Mengel <mengel@fnal.gov>).

2001-04-13 John R. Jackson <jrj@purdue.edu>

	* example/amanda.conf.in: Fix multiple holding disks comment.
	* example/amanda.conf.chg-scsi.in: Ditto, plus bring this file into
	  sync with the base version.

2001-04-12  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/getfsent.h (search_fstab): New prototype.
	* client-src/getfsent.c (search_fstab): New arg check_dev, skip
	entry if check_dev==1 and device stats failed.