@@ -1,3 +1,8 @@
+2001-05-14 John R. Jackson <jrj@purdue.edu>
+
+	* client-src/amandad.c: Fix hang when the incoming packet size is
+	  larger than the pipe buffer.  Also fix a buffer overflow bug.
+
 2001-05-11 John R. Jackson <jrj@purdue.edu>
 
 	* changer-src/chg-scsi.c: Add support for "-slot advance".
